fix navigation - too much margin

--- a/source-bundle/scss/molecules/navigation/navigation-primary-desk.scss
+++ b/source-bundle/scss/molecules/navigation/navigation-primary-desk.scss
@@ -24,7 +24,9 @@ $navigationPrimaryFontColor:                $white;
     &.opened {
         display:                    block;
     }
-
+    .block.navigation {
+        margin-bottom:              0;
+    }
     // Global Menulayout
     .menu {
         list-style:                     none;
